Fix: 눈 박스 위치 수정

--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
     <title>Fedi</title>
   </head>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
